--- a/vendas.htm
+++ b/vendas.htm
@@ -7,6 +7,8 @@
     <title>Pagina Inicial</title>
 </head>
 <body>
+    <h1>Vendas</h1>
+    <p>Compre Dolars !!!</p>
     <a href="index.htm">Ir para index</a>
 </body>
 </html>
