criada a pagina blog

--- a/blog.htm
+++ b/blog.htm
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Inicial</title>
+    <title>Pagina blogl</title>
 </head>
 <body>
-    <a href="vendas.htm">Ir para  vendas</a>
-    <h2>teste de pagina inicial</h2>
+    <a href="index.htm">Ir para  vendas</a>
+    <h2>tesste de pagina</h2>
 </body>
 </html>
