Alteração nas vendas

--- a/vendas.htm
+++ b/vendas.htm
@@ -10,5 +10,6 @@
     <h1>Vendas</h1>
     <p>Compre Dolars !!!</p>
     <a href="index.htm">Ir para index</a>
+    <H2>teste de  conteudo</H2>
 </body>
 </html>
