atualização de endas

--- a/vendas.htm
+++ b/vendas.htm
@@ -11,5 +11,6 @@
     <p>Compre Dolars !!!</p>
     <a href="index.htm">Ir para index</a>
     <H2>teste de  conteudo</H2>
+    <h3>kjkljjlkjkl</h3>
 </body>
 </html>
